fichiers.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops
  labels:
    app: devops
    service: devops
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: devops

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-v1
  labels:
    app: devops
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops
      version: v1
  template:
    metadata:
      labels:
        app: devops
        version: v1
    spec:
      serviceAccountName: devops-account
      containers:
      - name: devops
        image: devops_project_s7_pyapp
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-v2
  labels:
    app: devops
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops
      version: v2
  template:
    metadata:
      labels:
        app: devops
        version: v2
    spec:
      serviceAccountName: devops-account
      containers:
      - name: devops
        image: devops_project_s7_pyapp
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
