gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: devops-destination
spec:
  host: devops
  subsets:
  - name: v1
    labels:
      version: v1

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
    - route:
      - destination:
          subset: v1
          host: devops
          port:
            number: 3000
        weight: 50
      - destination:
          subset: v2
          host: devops
          port:
            number: 3000
        weight: 50
